<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_maps_home_work_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/onboardings"
            android:icon="@drawable/onboardings"
            android:title="@string/menu_onboardings" />
        <item
            android:id="@+id/menu_int"
            android:icon="@drawable/int1"
            android:title="@string/menu_int" />
        <item
            android:id="@+id/nav_geo"
            android:icon="@drawable/map"
            android:title="@string/Route" />
        <item
            android:id="@+id/nav_reachout"
            android:icon="@drawable/rc"
            android:title="@string/My_Reachouts" />
        <item
            android:id="@+id/Setting"
            android:icon="@drawable/settings"
            android:title="@string/Setting" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_3_24"
            android:title="@string/profile" />

    </group>
</menu>